# Kaptura

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.tr.md  build.rs  cargo-runner.bat  errors.txt  kaptura_setup.iss  python.bat  run.bat  test.rs
.cargo/: config.toml
src/: main.rs
src/media/: pipeline.rs
src/renderer/: app.rs  video_shader.wgsl
src/ui/: overlay.rs
